2010-11-23  Ethan A Merritt  <merritt@u.washington.edu>

	* term/js/gnuplot_common.js:  Rotated text should be zoomed also.

	* src/eval.c (fill_gpval_axis) term/canvas.trm:
	Export polar axis limits and logscale status for external mousing.

2010-11-20  Casey Carter   <ctcarter@users.sourceforge.net>

	* demo/html/index.canvas demo/html/index.save demo/html/index.svg 
	term/canvas.trm:  syntax error in link record of standalone mode.

2010-11-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c src/axis.h src/command.c src/eval.c src/graphics.c
 	src/misc.c src/mouse.c src/plot2d.c src/save.c src/set.c src/setshow.h
	src/show.c src/tables.c src/tables.h src/unset.c
 	demo/polar.dem demo/poldat.dem docs/gnuplot.doc:

	Improved support for polar coordinate mode. 
	The polar axis gets syntax and properties equivalent to the x/y/z axes.
	- set/unset raxis (always drawn through the origin)
	- set rrange controls the extent of the axes and of the plot itself;
	  the xrange and yrange are set to match, but can be changed afterward
	- set rtics (drawn to right of origin; optionally mirrored to the left)
	- set log r (does not affect scaling on x or y)
	- polar coordinate readout from mousing
	- filledcurves bounded by constant r
	- polar.dem (turn off rtics so the demo output remains as before)
	  poldat.dem (add a plot showing raxis, rtics, and log scaling on r)

	* src/set.c (set_grid): Clean up the option parsing for set grid.

	* src/save.c: save output for "set view" could not be read in.

2010-11-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gadgets.c (clip_line):  When draw_clip_line() was made into a
	wrapper for clip_line() in May 2000, they differed in a single test.
	The version of the test from clip_line() was kept.  But this broke
	the case clip_line(x, ymin, x, ymax+eps), which clipped to ymin,ymin
	rather than to ymin,ymax. I do not know if there were any callers of
	clip_line() at the time that needed the variant test, but if so they no